--- a/src/main/webapp/resources/css/common/auth_mail.css
+++ b/src/main/webapp/resources/css/common/auth_mail.css
@@ -1,69 +1,73 @@
-@charset "UTF-8";
-
-body{
-	background-color: var(--subColor);
-}
-
+/*진행상태*/
 .progressDiv{
 	display: flex;
 	justify-content: space-around;
-    align-items: center;
+	align-items: center;
 	position: fixed;
 	top: 40px;
 	right: 20px;
-	/* border: 3px solid pink; */
-	width: 200px;
-	height: 50px;
-	color: black;
+	width: 150px;
+	height: 40px;
+	background-color: rgba(0, 0, 0, 0.19);
 }
-
+.backOne{
+	color: var(--fontColor);
+}
 .one{
 	animation: colorChange 1s infinite linear alternate;
-}	
-
-.oneDot{
-	/* animation: colorChange 1s leaner infinite normal forwards; */
-	animation: colorChange 1s infinite linear alternate;
 }
-
-.backOne{
-	color: yellow;
-}
-
 
 @keyframes colorChange {
 	0%{
-		color: yellow;
+		color: var(--fontColor);
 	}
-	
+
 	50%{
 		color: white;
 	}
 }
-
+.codeDiv{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
 h2{
-	font-family: 'GimpoGothicBold00';
 	color: var(--subFontColor);
 }
-
 /*이메일 인증번호 */
 .secretEmailDiv{
-	
 	width: 400px;
-	height: 200px;
-	/* border: 3px solid black; */
-	margin: 0 auto;
+	height: 500px;
+	margin: 5rem auto;
 	display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-	padding: 1rem;
-	
+	align-items: center;
+}
+#secretEmailText{
+	margin: 0.5rem 0;
+}
+.secretEmailSpan{
+	margin: 0.5rem 0 0;
 }
 
+@media screen and (min-width: 1px) and (max-width: 767px) {
+	h2{
+		font-size: 0.9rem;
+	}
+	.secretEmailDiv{
+		width: 260px;
+	}
+	#secretEmailText{
+		width: 95%;
+	}
+	.formBtns{
+		width: 95%;
+	}
+}
 
-.secretEmailSpan{
-	font-family: 'GimpoGothicBold00';
-	margin-top: 0.5rem;
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+	h2{
+		font-size: 1rem;
+	}
 }
 
