--- a/src/main/webapp/resources/css/shop/main/shop_user.css
+++ b/src/main/webapp/resources/css/shop/main/shop_user.css
@@ -1,13 +1,11 @@
 /*광고*/
 .carousel {
-    margin: 2rem auto;
-    width: 95%;
-    height: 800px;
+    width: 100%;
+    height: calc(100vh - 80px);
     background-color: var(--mainColor);
     position: relative;
     overflow: hidden;
-    border-radius: 15px;
-    border: 3px solid var(--basicFontColor);
+    border: 1px solid var(--basicFontColor);
 }
 .adContainer {
     width: 600%;
@@ -33,6 +31,19 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
+}
+.carouselImgDiv img:first-child{
+    animation: loadCarouselMainImg 2s 1 linear forwards;
+}
+@keyframes loadCarouselMainImg {
+    0%{
+        opacity: 0;
+        transform: scale(1, 1.1);
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1, 1);
+    }
 }
 .adNaviCon{
     position: absolute;
