--- a/src/main/webapp/resources/css/shop/product/product_detail_user.css
+++ b/src/main/webapp/resources/css/shop/product/product_detail_user.css
@@ -16,7 +16,6 @@ main {
 .topLeft {
     width: 50%;
     height: 100%;
-    border: 3px solid red;
 }
 
 /*메인 이미지*/
@@ -34,6 +33,7 @@ main {
     height: 100%;
     max-height: 500px;
     object-fit: fill;
+    cursor: pointer;
 }
 
 /*서브이미지*/
@@ -60,22 +60,92 @@ main {
 .topRight {
     width: 50%;
     height: 100%;
-    border: 3px solid blue;
 }
 .topRightTop{
     width: 100%;
     height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
-.topRight span{
+.topRightTopInfoDiv{
+    margin: 5rem auto;
+    width: 95%;
+    height: 100%;
+    padding: 1rem 0;
+    border: 1px solid white;
+    position: relative;
+}
+.productNameH3{
+    padding: 0 5px;
+    background-color: var(--subColor);
+    position: absolute;
+    top: -24px;
+    left: 12px;
+    font-size: 1.5rem;
+
+}
+.productInfoSpanDiv{
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+}
+.productInfoSpanDiv::-webkit-scrollbar{
+    width: 10px;
+}
+.productInfoSpanDiv::-webkit-scrollbar-track{
+    background-color: rgb(94, 94, 94);
+}
+.productInfoSpanDiv::-webkit-scrollbar-thumb{
+    background-color: rgba(31, 31, 31, 0.47);
+}
+.productInfoSpan{
     display: inline-block;
-    /*font-weight: bolder;*/
-    font-family: "Black Han Sans";
+    font-weight: bolder;
     padding: 0.5rem;
-    background-color: #1c61a4;
-    color: #adadad;
+    background-color: #3f87c5;
+    color: #d9d9d9;
     border-radius: 20px;
     margin: 0.5rem;
 
+}
+.shareDiv{
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.shareIconsWrapDiv{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: #111111;
+    /*background-color: #ffffff;*/
+    border-radius: 10px;
+    margin: 0 0.5rem;
+    cursor: pointer;
+    transition: .3s;
+}
+.shareIcons{
+    font-size: 30px;
+}
+.fa-youtube{
+    color: #c4302b;
+}
+.fa-facebook{
+    color: #3b5998;
+}
+.fa-square-twitter{
+    color: #00acee;
+}
+.shareIconsImg{
+    width: 30px;
+    height: 30px;
+    object-fit: fill;
+}
+.fa-copy{
+    /*color: var(--mainColor);*/
 }
 .topRightBottom{
     width: 100%;
@@ -85,19 +155,24 @@ main {
 }
 /*상단 오른쪽 수량 선택 구역*/
 .quantityDiv {
-    width: 250px;
+    width: 208px;
     height: 100px;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 8px;
 }
 /*수량 입력 텍스트*/
 #quantityText {
-    width: 200px;
+    width: 150px;
     height: 100px;
     text-align: center;
     background-color: var(--mainColor);
     color: var(--subFontColor);
     border: none;
     user-select: none;
+    font-size: 1.3rem;
+    font-family: "Black Han Sans";
 }
 .quantitySubDiv{
     width: 50px;
@@ -114,14 +189,41 @@ main {
     transition: .3s;
     cursor: pointer;
     border: none;
+    font-family: "Black Han Sans";
 }
 /*기타 구역*/
-.orderDiv{
-    width: calc(100% - 250px);
+.orderDiv {
+    width: calc(100% - 208px);
     height: 100%;
     display: flex;
     align-items: center;
-    border: 3px solid red;
+    justify-content: space-around;
+}
+#productPriceSpan{
+    font-size: 1.5rem;
+    font-family: "Black Han Sans";
+    margin: 0 0.5rem;
+}
+.orderDivBtnDiv{
+    width: fit-content;
+    height: 200px;
+    display: flex;
+    align-items: center;
+}
+#basketBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--sub2Color);
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 40px;
+    margin-right: 5px;
+}
+#submitBtn{
+    border-radius: 10px;
 }
 /*중단*/
 .productMiddle {
@@ -371,8 +473,7 @@ main {
 .navigatorContainer {
     font-family: 'Black Han Sans';
     width: 50px;
-    height: 250px;
-    background-color: var(--fontColor);
+    height: 50px;
     position: fixed;
     right: 20px;
     top: 50%;
@@ -380,53 +481,28 @@ main {
     pointer-events: none;
     opacity: 0;
     transition: .5s;
+    border-radius: 50%;
+    transform: rotate(-180deg);
 }
-
-
-.toTopDiv {
+.naviDiv, .toTopDiv, .toReviewCon, .toBottomDiv, .youtubeDiv{
+    position: absolute;
     width: 100%;
-    height: 25%;
-    border: 1px solid white;
+    height: 100%;
     cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .3s;
+    transition: .5s;
+    background-color: var(--sub2Color);
+    border-radius: 50%;
 }
-
-.toReviewCon {
-    width: 100%;
-    height: 25%;
-    border: 1px solid white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .3s;
+.naviDiv i{
+    font-size: 25px;
 }
-
-.toBottomDiv {
-    width: 100%;
-    height: 25%;
-    border: 1px solid white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .3s;
+.toTopDiv, .toReviewCon, .toBottomDiv, .youtubeDiv{
+    opacity: 0;
+    z-index: -1;
 }
-
-.youtubeDiv {
-    width: 100%;
-    height: 25%;
-    border: 1px solid white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: .3s;
-}
-
 .playIconSpan{
     transition: .3s;
 }
@@ -486,11 +562,12 @@ main {
     height: 100%;
     z-index: 997;
     overflow: scroll;
-    background-color: var(--mainColor);
+    background-color: rgba(0, 0, 0, 0.61);
+    align-items: center;
+    justify-content: center;
 }
 .fullImageContainer img{
-    display: block;
-    margin: 0 auto;
+    position: center;
 }
 
 .closeFullImageContainerIcon {
@@ -539,8 +616,77 @@ main {
 
 /* 스마트폰 */
 @media screen and (min-width: 1px) and (max-width: 767px) {
+    .productTop {
+        flex-direction: column;
+        height: calc((100vh - 80px) * 2);
+    }
 
+    .topLeft, .topRight {
+        width: 100%;
+        height: calc(100vh - 80px);
+    }
+    .productMainImg{
+        width: 250px;
+        height: 250px;
+    }
+    .subImgWrapDiv{
+        width: 70px;
+        height: 70px;
+    }
+    .productSubImg{
+        width: 70px;
+        height: 70px;
+    }
+    .topRightTop{
+        height: calc(100% - 200px);
+    }
+    .topRightTopInfoDiv {
+        margin: 1rem auto 0;
+        height: 60%;
+    }
+    .productNameH3{
+        font-size: 1rem;
+        top: -16px;
+    }
+    .shareDiv{
+        justify-content: end;
+    }
+    .shareIconsWrapDiv{
+        width: 30px;
+        height: 30px;
+        border-radius: 5px;
+    }
+    .shareIcons{
+        font-size: 20px;
+    }
+    .shareIconsImg{
+        width: 20px;
+        height: 20px;
+    }
+    .topRightBottom{
+        height: 400px;
+        flex-direction: column;
+    }
 
+    .quantityDiv, .orderDiv{
+        width: 100%;
+        height: 100px;
+    }
+    #productPriceSpan{
+        font-size: 1rem;
+    }
+    #basketBtn{
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+        border-radius: 5px;
+    }
+    #submitBtn{
+        width: 100px;
+        height: 30px;
+        font-size: 0.7rem;
+        border-radius: 5px;
+    }
     .reviewGraphDiv {
         flex-direction: column;
         height: fit-content;
@@ -593,7 +739,13 @@ main {
     .topLeft, .topRight {
         width: 100%;
     }
-
+    .topRightTopInfoDiv {
+        margin: 2rem auto;
+        height: 70%;
+    }
+    .shareDiv{
+        justify-content: end;
+    }
     .reviewGraphDiv p, .reviewBottom p {
         font-size: 0.8rem;
     }
@@ -640,12 +792,8 @@ main {
         color: var(--fontColor);
     }
 
-    .navigatorContainer div:hover {
-        color: var(--hoverColor);
-    }
-
-    .navigatorContainer div:hover .playIconSpan{
-        color: var(--hoverColor);
+    .navigatorContainer div:hover, .navigatorContainer div:hover i {
+        background-color: #1e1e1e;
     }
 
     .thumb:hover {
@@ -658,6 +806,9 @@ main {
     .adIframe{
         width: 1280px;
         height: 720px;
+    }
+    .shareIconsWrapDiv:hover{
+        background-color: #262626;
     }
 
 
