--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -77,6 +77,7 @@
 	object-fit : fill;
 	transition: .3s;
 	opacity: 0;
+	/*box-shadow: white 0px 0px 5px 3px;*/
 	filter: blur(4px);
 }
 .homeImgWrapDiv h1 {
@@ -131,8 +132,7 @@
 	.homeImgWrapDiv{
 		width: 70%;
 		height: 70%;
-		box-shadow: 0px 0px 2px white, 0px 0px 4px white, 0px 0px 8px white;
-		box-shadow: 0px 0px 2px crimson, 0px 0px 4px crimson, 0px 0px 8px crimson;
+		box-shadow: crimson 0px 0px 5px 3px;
 		animation: hue-rotate 3s linear infinite;
 	}
 	.homeImgWrapDiv h1{
@@ -162,9 +162,9 @@
 	.homeImgWrapDiv{
 		width: 80%;
 		height: 80%;
-		box-shadow: 0px 0px 2px white, 0px 0px 4px white, 0px 0px 8px white;
-		box-shadow: 0px 0px 2px crimson, 0px 0px 4px crimson, 0px 0px 8px crimson;
+		box-shadow: crimson 0px 0px 5px 3px;
 		animation: hue-rotate 3s linear infinite;
+
 	}
 	.homeImgWrapDiv h1{
 		font-size: 3rem;
@@ -183,10 +183,10 @@
 		transform: translateY(-10%);
 	}
 	.homeImgWrapDiv:hover{
-		box-shadow: 0px 0px 2px white, 0px 0px 4px white, 0px 0px 8px white;
+		box-shadow: white 0px 0px 5px 3px;
 	}
 	.homeImgWrapDiv:hover img{
-		opacity: 0.5;
+		opacity: 0.8;
 	}
 	.homeImgWrapDiv:hover p{
 		opacity: 1;
