--- a/src/main/webapp/resources/css/shop/draw/draw_customer.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_customer.css
@@ -1,52 +1,55 @@
-.draw_container{
+.draw_container {
     width: 100%;
-    background-color: var(--subColor);
-    font-family: 'GimpoGothicBold00';
-	transition: .3s;	
+    transition: .3s;
 }
 
-.section{
+.section {
     width: 100%;
 }
+
 /*메인 이미지*/
-.section1{
+.section1 {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     padding: 1rem;
-   /*  border: 3px solid bisque; */
-    font-family: 'GimpoGothicBold00';
-	transition: .3s;
+    border: 3px solid bisque;
+    transition: .3s;
 }
 
-.section1>h1{
+.section1 > h1 {
     font-size: 3.5rem;
     margin-bottom: 20px;
     color: var(--fontColor);
 }
 
-.section1>h1>span{
+.section1 > h1 > span {
     color: white;
 }
+.section1_img{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.section1_img > img {
+    width: 50%;
+    border-radius: 10px;
+    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+}
 
-.section1_img>img{
-   width: 1200px;
-    height: 850px;
-    border-radius:10px;
-    box-shadow : var(--sub2Color) 0px 0px 5px 3px;
-}   
 /*이벤트*/
-.section2{
+.section2 {
     width: 100%;
     font-family: 'GimpoGothicBold00';
-	transition: .3s;
-	marging-top:20px;
-}  
+    transition: .3s;
+    marging-top: 20px;
+}
 
 /*이벤트 상단*/
-.section2-top{
+.section2-top {
     height: 100px;
     /* margin-top: 5px; */
     width: 70%;
@@ -56,140 +59,152 @@
     justify-content: space-between;
     font-size: 1.5rem;
     padding: 2.5rem;
-    color:white;
-    border-bottom: 2px solid var(--subFontColor) ;
-    margin-top:10px;
-} 
+    color: white;
+    border-bottom: 2px solid var(--subFontColor);
+    margin-top: 10px;
+}
 
-.section2-top>span{  
+.section2-top > span {
     font-weight: bold;
 }
+
 /*이벤트 내용, foreach 반복 디비전*/
-.section2-bottom{
+.section2-bottom {
     width: 70%;
     margin: 0 auto;
     height: auto;
-    padding: 2rem;  
-}
-/*이벤트 각각 이미지*/
-.section2_img{
-    width: 80%;
-    height: 500px;
-    display:flex;
-   justify-content: center;
-   align-items: center;
-   margin-left:200px; 
-   margin-bottom:30px;
-     margin-top:20px;
-}
-.productMainImg{
-	width:800px;
-	height:480px;
-	border-radius: 10px;
-	box-shadow : var(--sub2Color) 0px 0px 5px 3px;
-}
-.section2_font .font_top{
-   border-bottom:1px solid var(--borderColor);  
-   width: 100%;
-   /* margin-top: 40px; */
-   /* height: 70px; */
-   font-size: 1.5rem;
-   padding: 1rem;
-}
-.font_top>h1 {
-	color: var(--fontColor);
-}
-.font_top>h3{
-	color:white;
+    padding: 2rem;
 }
 
-.font_bottom{
+/*이벤트 각각 이미지*/
+.section2_img {
+    width: 80%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 200px;
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.productMainImg {
+    width: 800px;
+    height: 480px;
+    border-radius: 10px;
+    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+}
+
+.section2_font .font_top {
+    border-bottom: 1px solid var(--borderColor);
+    width: 100%;
+    /* margin-top: 40px; */
+    /* height: 70px; */
+    font-size: 1.5rem;
+    padding: 1rem;
+}
+
+.font_top > h1 {
+    color: var(--fontColor);
+}
+
+.font_top > h3 {
+    color: white;
+}
+
+.font_bottom {
     display: flex;
     flex-direction: column;
     font-size: 1.5rem;
     padding: 1rem;
     color: white;
-    border-bottom: 2px solid var(--subFontColor) ;
+    border-bottom: 2px solid var(--subFontColor);
 
 }
-.font_bottom_td{
-	/* text-align : center; */ 
-	width:20%;
+
+.font_bottom_td {
+    /* text-align : center; */
+    width: 20%;
 }
 
-table{
+table {
     border-collapse: collapse;
-    
+
 }
-table td{
+
+table td {
     border: 1px solid white;
     padding: 1rem;
-    
-}
-table tr td:first{
-    width: 30%;
-}
-table tr td:last-child{
-    width: 70%;
-}
-.font_bottom_td{
-	/* text-align : center; */ 
-	width:20%;
+
 }
 
-.button_container{
-	 display: flex;
-    flex-direction: row;
- 
-   
-    
+table tr td:first {
+    width: 30%;
 }
-.font_top_button{
-     border-radius: 10px;
+
+table tr td:last-child {
+    width: 70%;
+}
+
+.font_bottom_td {
+    /* text-align : center; */
+    width: 20%;
+}
+
+.button_container {
+    display: flex;
+    flex-direction: row;
+
+
+}
+
+.font_top_button {
+    border-radius: 10px;
     width: 300px;
     height: 70px;
     background-color: var(--mainColor);
     font-size: 2.0rem;
     padding-left: 0.5rem;
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
+    font-family: 'GimpoGothicBold00';
+    outline: none;
+    transition: .3s;
     border: none;
     margin-top: 30px;
-    color:white;
-    font-weight: bold;  
-    margin-bottom:30px;
-    margin-left: 50px; 
+    color: white;
+    font-weight: bold;
+    margin-bottom: 30px;
+    margin-left: 50px;
     cursor: pointer;
 }
 
-.font_top_button:hover{
-	color: var(--fontColor);
+.font_top_button:hover {
+    color: var(--fontColor);
 }
 
-.font_top_button_end{
+.font_top_button_end {
     border-radius: 10px;
     width: 300px;
     height: 70px;
     padding-left: 0.5rem;
-	background-color: rgb(24, 24, 24);
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
+    background-color: rgb(24, 24, 24);
+    font-family: 'GimpoGothicBold00';
+    outline: none;
+    transition: .3s;
     border: none;
     font-size: 2.0rem;
-    color:white;
+    color: white;
     font-weight: bold;
     margin-top: 30px;
-    margin-right:50px;
+    margin-right: 50px;
     cursor: pointer;
 }
 
-.font_top_button_end:hover{
-	color: var(--fontColor);
+.font_top_button_end:hover {
+    color: var(--fontColor);
 }
+
 /* 모달 css */
-.modal_container{
+.modal_container {
     display: none;
     position: fixed;
     top: 0;
@@ -202,24 +217,27 @@ table tr td:last-child{
     backdrop-filter: blur(4px);
     z-index: 1;
 }
-.modal_body{
+
+.modal_body {
     background-color: white;
-    margin:8% auto;
+    margin: 8% auto;
     /* margin-left: 500px; */
     border-radius: 4px;
     width: 1000px;
 }
-.modal_top{
+
+.modal_top {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height:400px;
+    height: 400px;
     /* background-color: white; */
     color: black;
     font-size: 2.5rem;
 }
-.modal_bottom{
+
+.modal_bottom {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -227,30 +245,31 @@ table tr td:last-child{
     height: 100px;
     font-size: 2.0rem;
 }
+
 /*응모 닫기 버튼*/
-.modal_final_bottom_btn{
+.modal_final_bottom_btn {
     border-radius: 10px;
     width: 300px;
     height: 70px;
     padding-left: 0.5rem;
-	background-color: rgb(24, 24, 24);
-	font-family: 'GimpoGothicBold00';
-	outline: none;
-	transition: .3s;
+    background-color: rgb(24, 24, 24);
+    font-family: 'GimpoGothicBold00';
+    outline: none;
+    transition: .3s;
     border: none;
     font-size: 2.0rem;
-    color:white;
+    color: white;
     font-weight: bold;
     margin-top: 30px;
-    margin-right:50px;
+    margin-right: 50px;
     cursor: pointer;
 }
 
-.modal_final_bottom_btn:hover{
-	color: var(--fontColor);
+.modal_final_bottom_btn:hover {
+    color: var(--fontColor);
 }
 
-.modal_final_container{
+.modal_final_container {
     display: none;
     position: fixed;
     top: 0;
@@ -258,14 +277,15 @@ table tr td:last-child{
     left: 0;
     /* right: 0; */
     width: 100%;
-    height:100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.418);
     backdrop-filter: blur(4px);
     z-index: 1;
 }
-.modal_final_body{
+
+.modal_final_body {
     background-color: white;
-    margin:8% auto;
+    margin: 8% auto;
     /* margin-left: 500px; */
     border-radius: 4px;
     width: 1000px;
@@ -274,7 +294,8 @@ table tr td:last-child{
     flex-direction: column;
     justify-content: center;
 }
-.modal_final_top{
+
+.modal_final_top {
     width: 100%;
     height: 100px;
     border-bottom: 1px solid black;
@@ -287,50 +308,73 @@ table tr td:last-child{
     justify-content: center;
     align-items: center;
 }
-.modal_final_middle{
+
+.modal_final_middle {
     /* background-color: white; */
     width: 100%;
     height: 300px;
     font-size: 1.3rem;
     display: flex;
-    flex-wrap : wrap;
+    flex-wrap: wrap;
     border-bottom: 1px solid black;
-   /*  background-color: blue;
-     */
-     
-    
+    /*  background-color: blue;
+      */
+
+
     /* padding-top: 20px; */
     /* line-height: 80px; */
 }
 
-.winnerSpan{
-	margin: 0.5rem;
+.winnerSpan {
+    margin: 0.5rem;
 }
+
 /* .modal_fianl_middle_modal{
 	display: flex;
 	 flex-direction:row; 
 } */
 
-.modal_final_bottom{
+.modal_final_bottom {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 100px;
     width: 100%;
     /* font-size: 2.0rem; */
-    
-    
+
+
 }
+
 /* .modal_final_middle>span:nth-child(n){
     margin-left: 25px;
     background-color: white;
     color: black;
 } */
 
-#limitedBtns{
-	display: none;
+#limitedBtns {
+    display: none;
 }
 
-.deadlineSpan{
-	color: var(--fontColor);
+.deadlineSpan {
+    color: var(--fontColor);
+}
+
+@media screen and (min-width: 1px) and (max-width: 1023px){
+    /*메인 이미지*/
+    .section1 > h1 {
+        font-size: 1rem;
+    }
+    .section1_img > img {
+       width: 90%;
+    }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+    /*메인 이미지*/
+    .section1 > h1 {
+        font-size: 1.5rem;
+    }
+    .section1_img > img {
+       width: 70%;
+    }
 }
