--- a/src/main/webapp/resources/css/shop/draw/draw_add.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_add.css
@@ -1,16 +1,36 @@
+.drawHeaderNavDiv{
+    width: 100%;
+    height: 40px;
+    background-color: #2e383c;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+.addDrawBtn{
+    width: 100px;
+    height: 40px;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    border: none;
+    font-family: "Black Han Sans";
+    transition: .3s;
+}
+
 /*이벤트*/
 .drawContainer {
     width: 100%;
     max-width: 1600px;
-    margin: 5rem auto 0;
-    border-top: 1px solid whitesmoke;
+    margin: 0 auto;
+
 }
 
 /*이벤트 상단*/
 .drawHeaderDiv {
+    margin: 5rem 0 5rem;
     width: 100%;
     position: relative;
-
+    border-top: 1px solid whitesmoke;
 }
 
 .drawHeaderDiv span {
@@ -46,16 +66,18 @@
     background-color: var(--sub2Color);
     display: flex;
     align-items: center;
-    padding-left: 1rem;
+    justify-content: center;
 }
 
 .oneDrawTop input[type="text"]{
     margin-left: 1rem;
     transition: .3s;
     font-family: "Black Han Sans";
+    width: 80%;
     height: 30px;
     padding-left: 0.5rem;
     color: black;
+
 }
 
 
@@ -75,13 +97,60 @@
 }
 .productAnchor{
     text-decoration: none;
+    transition: .3s;
 }
+.productMainImgWrapDiv{
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.productMainImgWrapDivCloseDiv{
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    top: 0;
 
+    background-color: rgba(0, 0, 0, 0.43);
+}
+.closeImgWrapDivIcon{
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    width: 16px;
+    height: 16px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
 .productMainImg {
     width: 500px;
     height: 500px;
     border-radius: 10px;
     box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+}
+
+.addDrawProductDiv{
+    width: 500px;
+    height: 500px;
+    border-radius: 10px;
+    box-shadow: var(--sub2Color) 0px 0px 5px 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.plusIcon{
+    color: var(--subColor);
+    text-shadow: var(--sub2Color) 0px 0px 5px;
+    font-size: 5rem;
+    transition: .3s;
+
 }
 
 .drawBottomDiv {
@@ -102,7 +171,7 @@
 
 .infoWrapDiv {
     width: 100%;
-    height: calc( 100% / 7);
+    height: calc( 100% / 6);
     display: flex;
 }
 .infoTop{
@@ -162,6 +231,96 @@
     border-radius: 10px;
 }
 
+/*상품 선택 컨테이너*/
+.selectProductContainer{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    backdrop-filter: blur(4px);
+    align-items: center;
+    justify-content: center;
+}
+.selectProductDiv{
+    width: 80%;
+    height: 80%;
+    background-color: rgba(59, 59, 59, 0.6);
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.selectProductDivLeft{
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.drawProductImg{
+    width: 500px;
+    height: 500px;
+    display: none;
+}
+.selectProductDivRight{
+    width: 50%;
+    height: 100%;
+
+}
+.selectProductDivRightHeader{
+    width: 100%;
+    height: 50px;
+}
+.selectProductDivRightHeader select{
+    width: 100px;
+}
+.selectSpan{
+    cursor: pointer;
+}
+.closeIcon{
+    position: absolute;
+    top: -32px;
+    right: 0;
+    font-size: 2rem;
+}
+.selectProductDivRightMain{
+    width: 100%;
+    height: calc(100% - 50px);
+    padding: 1rem;
+    overflow-y: auto;
+}
+.drawEmptySpan{
+    font-weight: bolder;
+    color: var(--subFontColor);
+}
+.drawLineDiv{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.drawImg{
+    width: 30px;
+    height: 30px;
+}
+.drawLineDiv span{
+    margin-left: 10px;
+    color: white;
+}
+.drawIdSpan{
+    width: 30px;
+}
+.drawNameSpan{
+    width: 400px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 
 
 @media screen and (min-width: 1px) and (max-width: 767px) {
@@ -184,9 +343,46 @@
     .infoTop{
         font-size: 0.7rem;
     }
-    .drawImgDiv img {
+    .productMainImgWrapDiv{
         width: 250px;
         height: 250px;
+    }
+    .productMainImg {
+        width: 250px;
+        height: 250px;
+    }
+    .addDrawProductDiv{
+        width: 250px;
+        height: 250px;
+    }
+    .selectProductContainer{
+        min-width: 280px;
+    }
+    .selectProductDivLeft{
+        overflow: hidden;
+        width: 0;
+    }
+    .selectProductDivRight{
+        width: 100%;
+    }
+
+    .selectProductDivRightHeader{
+        height: 100px;
+    }
+    .selectProductDivRightHeader select{
+        width: 40%;
+    }
+    .selectProductDivRightMain{
+        height: calc(100% - 100px);
+    }
+    .drawIdSpan{
+        display: none;
+    }
+    .drawPriceSpan{
+        display: none;
+    }
+    .drawNameSpan{
+        width: 120px;
     }
 
 
@@ -206,6 +402,36 @@
         width: 100%;
         height: 600px;
     }
+    .drawNameSpan{
+        width: 300px;
+    }
+    .drawProductImg{
+        width: 300px;
+        height: 300px;
+    }
+    .selectProductDivLeft{
+        overflow: hidden;
+        width: 0;
+    }
+    .selectProductDivRight{
+        width: 100%;
+    }
 
 
+}
+
+@media screen and (min-width: 1024px) {
+    .addDrawProductDiv:hover{
+        box-shadow: #232323 2px 2px 5px 5px;
+    }
+    .addDrawProductDiv:hover i{
+        transform: scale(1.1,1.1) rotateZ(180deg);
+        text-shadow: black 0px 0px 7px;
+    }
+    .addDrawBtn:hover{
+        background-color: var(--sub2Color);
+    }
+    .productAnchor:hover{
+        color: var(--fontColor);
+    }
 }
