--- a/src/main/webapp/resources/css/shop/draw/draw_customer.css
+++ b/src/main/webapp/resources/css/shop/draw/draw_customer.css
@@ -1,16 +1,35 @@
+.drawHeaderNavDiv{
+    width: 100%;
+    height: 40px;
+    background-color: #2e383c;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+.addDrawBtn{
+    width: 100px;
+    height: 40px;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    border: none;
+    font-family: "Black Han Sans";
+    transition: .3s;
+}
 /*이벤트*/
 .drawContainer {
     width: 100%;
     max-width: 1600px;
-    margin: 5rem auto 0;
-    border-top: 1px solid whitesmoke;
+    margin: 0 auto;
+
 }
 
 /*이벤트 상단*/
 .drawHeaderDiv {
+    margin: 5rem 0 5rem;
     width: 100%;
     position: relative;
-
+    border-top: 1px solid whitesmoke;
 }
 
 .drawHeaderDiv span {
@@ -33,7 +52,6 @@
 }
 
 .oneDrawDiv {
-    margin: 5rem 0;
     width: 100%;
     height: 500px;
     display: flex;
@@ -65,6 +83,7 @@
 }
 .productAnchor{
     text-decoration: none;
+    transition: .3s;
 }
 
 .productMainImg {
@@ -90,7 +109,9 @@
 .drawBottomDiv::-webkit-scrollbar-thumb{
     background-color: rgba(31, 31, 31, 0.47);
 }
-
+.drawBottomDiv ul{
+    list-style: none;
+}
 .drawBottomDiv li {
     margin-bottom: 0.5rem;
 }
@@ -111,7 +132,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--sub2Color);
 }
 
 .drawApplicationBtn {
@@ -211,6 +231,9 @@
     .oneDrawDiv {
         height: 900px;
     }
+    .oneDrawTop h3{
+        font-size: 0.8rem;
+    }
 
     .drawCenterDiv {
         height: 800px;
@@ -228,9 +251,10 @@
     }
 
     .drawBottomDiv {
+        padding: 0.5rem;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
     }
 
     .drawBottomDiv li span {
@@ -259,9 +283,19 @@
     }
 
     .drawBottomDiv {
+        padding: 0.5rem;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: start;
     }
-
 }
+
+@media screen and (min-width: 1024px) {
+    .addDrawBtn:hover{
+        background-color: var(--sub2Color);
+    }
+    .productAnchor:hover{
+        color: var(--fontColor);
+    }
+}
+
