--- a/src/main/webapp/resources/css/shop/shop_global.css
+++ b/src/main/webapp/resources/css/shop/shop_global.css
@@ -123,9 +123,14 @@ header a{
     border-bottom: 3px solid white;
     border-radius: 0px;
 }
+.shopFooterMapDiv{
+
+    width: 100%;
+    height: 500px;
+    margin-top: 15rem;
+}
 
 footer{
-    margin-top: 5rem;
     width: 100%;
 }
 
